# SolarEx

./: AGENTS.md  CMakeLists.txt  README.md  compile.sh  solarx.py
solarex/Plugins/RendererSettings/: main.py
solarex/core/: modules.py  plugins.py
solarex/net/: httpx_backend.py
solarex/render/: manager.py  solarren.py
solarex/render/modules/: solarren.py
src/: font.c  font.h  html.h  main.c  net.c  re_sdl.h  render.c  render.h  sdl_stub.c  sdl_stub.h
